# GeometryShaders

./: CMakeLists.txt  GeometryShader.pro  README.md
Curves/: CMakeLists.txt  Curves.pro  README.md
Curves/include/: NGLScene.h  WindowParams.h
Curves/shaders/: curveFragment.glsl  curveGeometry.glsl  curveVertex.glsl
Curves/src/: NGLScene.cpp  NGLSceneMouseControls.cpp
Normals/: CMakeLists.txt  README.md
Normals/include/: NGLScene.h
Normals/shaders/: PhongFragment.glsl  PhongVertex.glsl  normalFragment.glsl  normalGeo.glsl  normalVertex.glsl
Normals/src/: NGLScene.cpp
VectorViz/: CMakeLists.txt
VectorViz/include/: NGLScene.h
VectorViz/shaders/: VectorVizFragment.glsl  VectorVizGeometry.glsl  VectorVizVertex.glsl
VectorViz/src/: NGLScene.cpp  NGLSceneMouseControls.cpp
include/: NGLScene.h
shaders/: PhongFragment.glsl  PhongVertex.glsl  normalFragment.glsl  normalGeo.glsl  normalVertex.glsl
src/: NGLScene.cpp
